# ausb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Kconfig  README.md  idf_component.yml
ausb/: ControlEndpoint.cpp  ControlEndpoint.h  ControlHandler.cpp  ControlHandler.h  CtrlInXfer.cpp  CtrlInXfer.h  CtrlOutXfer.cpp  CtrlOutXfer.h  DevCtrlInTransfer.cpp  DevCtrlInTransfer.h  DevCtrlOutTransfer.cpp  DevCtrlOutTransfer.h  DeviceEvent.h  RxBuffer.cpp  RxBuffer.h  SetupPacket.h  UsbDevice.cpp  UsbDevice.h  ausb_config.h  ausb_config_vars.h.in  ausb_types.h  bcd.h  log.cpp  log.h  usb_types.h
ausb/desc/: ConfigDescriptor.h  DescriptorMap.h  DeviceDescriptor.h  EndpointDescriptor.h  InterfaceDescriptor.h  StaticDescriptorMap.h  StaticDescriptorMapUtils.cpp  StaticDescriptorMapUtils.h  types.h
ausb/dev/: ControlEndpoint.cpp  ControlEndpoint.h  ControlHandler.cpp  ControlHandler.h  ControlMessageHandler.h  CtrlInXfer.cpp  CtrlInXfer.h  CtrlOutXfer.cpp  CtrlOutXfer.h  DeviceEvent.h  EndpointManager.cpp  EndpointManager.h  EndpointZero.cpp  EndpointZero.h  InEndpoint.h  Interface.h  MessagePipe.cpp  MessagePipe.h  OutEndpoint.h  StdControlHandler.cpp  StdControlHandler.h  UsbDeviceExample.h
ausb/dev/ctrl/: AckEmptyCtrlOut.cpp  AckEmptyCtrlOut.h  GetConfiguration.cpp  GetConfiguration.h  GetDevDescriptorModifyEP0.cpp  GetDevDescriptorModifyEP0.h  GetStaticDescriptor.cpp  GetStaticDescriptor.h  SendData.h  SetAddress.cpp  SetAddress.h  StallCtrlIn.cpp  StallCtrlIn.h  StallCtrlOut.cpp  StallCtrlOut.h
ausb/dev_ctrl/: GetStaticDescriptor.cpp  GetStaticDescriptor.h
ausb/device/: ControlMessageHandler.h  CtrlInXfer.cpp  CtrlInXfer.h  CtrlOutXfer.cpp  CtrlOutXfer.h  EndpointManager.cpp  EndpointManager.h  EndpointZero.cpp  EndpointZero.h  InEndpoint.h  Interface.h  MessagePipe.cpp  MessagePipe.h  OutEndpoint.h  StdControlHandler.cpp  StdControlHandler.h
ausb/device/ctrl/: AckEmptyCtrlOut.cpp  AckEmptyCtrlOut.h  GetDevDescriptorModifyEP0.cpp  GetDevDescriptorModifyEP0.h  GetStaticDescriptor.cpp  GetStaticDescriptor.h  SendData.h  SetAddress.cpp  SetAddress.h  StallCtrlIn.cpp  StallCtrlIn.h  StallCtrlOut.cpp  StallCtrlOut.h
ausb/esp/: Esp32Device.cpp  Esp32Device.h  EspError.cpp
ausb/hid/: HidDescriptor.h  HidInEndpoint.cpp  HidInEndpoint.h  HidInterface.cpp  HidInterface.h  HidReportDescriptor.h  HidReportMap.h  HidReportQueue.cpp  HidReportQueue.h  HidSetReport.cpp  HidSetReport.h  KeyboardInterface.cpp  KeyboardInterface.h  generic_desktop.h  key_codes.h  leds.h  report_types.h  types.h  usage_page.h
ausb/hid/kbd/: BootKeyboard.cpp  BootKeyboard.h  BootReport.cpp  BootReport.h  KeyBitmap.cpp  KeyBitmap.h
ausb/hid/usage/: generic_desktop.h  keys.h  leds.h  usage_page.h
ausb/hw/: HWDevice.h  HWDeviceBase.h
ausb/hw/esp/: Esp32Device.cpp  Esp32Device.h  EspError.cpp  EspError.h  EspTaskLoop.h  TaskNotificationLoop.cpp  TaskNotificationLoop.h
ausb/hw/mock/: MockDevice.cpp  MockDevice.h
cmake/: compiler-settings.cmake  esp.cmake  linux.cmake
examples/hid_keyboard/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
examples/hid_keyboard/main/: CMakeLists.txt  idf_component.yml  main.cpp
test/: CMakeLists.txt  ControlEndpointTest.cpp  HidKeyboardTest.cpp  KbdBootReport.cpp  KeyBitmap.cpp  StdControlHandlerTest.cpp  descriptor_test.cpp
test/esp32s3/: .gitignore  CMakeLists.txt
test/esp32s3/main/: idf_component.yml  main.cpp
test/lib/: empty.cpp  mock_utils.cpp  mock_utils.h
test/runner/esp32s3/: CMakeLists.txt  sdkconfig.defaults
test/runner/esp32s3/main/: idf_component.yml  main.cpp
test/runner/mock/: main.cpp
